MB-37955: Forestdb does not return erroron read failure

When a corruption is detected, forestdb does not pass the error all the way up.
The fix is to handle the error returned and pass it up.

Change-Id: I123f59d4c0f2010bd6a34c6a6b596c13c28cc83e
Reviewed-on: http://review.couchbase.org/122826
Tested-by: Build Bot <build@couchbase.com>
Well-Formed: Wayne Siu <wayne@couchbase.com>
Well-Formed: Build Bot <build@couchbase.com>
Reviewed-by: Srinath Duvuru <srinath.duvuru@couchbase.com>